tests/negative/test_expr_deref_bad_type.orb
fnc main() () {
    let (x:i32 100);
    * x;
};